--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/BigPugLabs/fso-node-express-3#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "figlet": "^1.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
