--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
