--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,10 @@
 kind: pipeline
 type: kubernetes
-name: default
+name: testing
 
 steps:
-- name: greeting
-  image: alpine
+- name: tests
+  image: node:latest
   commands:
-  - echo hello
-  - echo world
+  - npm install
+  - npm test
