--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,18 @@ steps:
   commands:
   - npm install
   - npm test
+
+- name: publish
+  image: banzaicloud/drone-kaniko
+  settings:
+    registry: trow-svc.trow.svc.cluster.local:8000
+    repo: trow-svc.trow.svc.cluster.local:8000/fso-node-express-3
+    tags: ${DRONE_COMMIT_SHA}
+    cache: true
+    skip_tls_verify: true
+    build_args:
+    - COMMIT_SHA=${DRONE_COMMIT_SHA}
+    username:
+      from_secret: docker-username
+    password:
+      from_secret: docker-password
